add: syntax parser part 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,19 @@ add_custom_command(
         DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/lex/scanner.l
 )
 
+add_custom_command(
+        OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/syntax/parser.cpp
+        COMMAND bison -o ${CMAKE_CURRENT_SOURCE_DIR}/src/syntax/parser.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/syntax/parser.y
+        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/syntax/parser.y
+)
+
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Besplatno_Compiler main.cpp
-        src/lex/token.h
         src/lex/scanner.cpp
+        src/syntax/parser.cpp
+        src/lex/lex.cpp
 )
 include_directories(src/lex)
+include_directories(src/syntax)
+include_directories(src/utils)
