fix: change naming, bug with else, bug with var decl, examples and their results; Add: init semantic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(Besplatno_Compiler main.cpp
         src/lex/scanner.cpp
         src/syntax/parser.cpp
         src/lex/lex.cpp
+        src/semantic/semAnalyzer.cpp
 )
 include_directories(src/lex)
 include_directories(src/syntax)
