--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(Besplatno_Compiler main.cpp
         src/syntax/parser.cpp
         src/lex/lex.cpp
         src/semantic/semAnalyzer.cpp
+        src/syntax/ast.cpp
 )
 include_directories(src/lex)
 include_directories(src/syntax)
